# issl-translation-slack-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
issl_translation_bot/: __init__.py  bot.py  main.py  translator.py
