[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "issl-translation-slack-bot"
version = "0.1.0"
description = "Slack bot for translation services at ISSL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "slack-bolt>=1.18.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["issl_translation_bot"]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.scripts]
bot = "issl_translation_bot.main:main"

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]